--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
         </div>
     </div>
     @await Html.PartialAsync("_ScriptsPartial")
-  @*   @await Component.InvokeAsync("Notyf"); *@
+    @await Component.InvokeAsync("Notyf"); 
     @await RenderSectionAsync("BottomScripts", false)
 </body>
 </html>
