--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/SubCategory/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/SubCategory/Index.cshtml
@@ -20,10 +20,10 @@
                     @if (ViewBag.TransferInf)
                     {
                         <a asp-area="Admin"
-                           asp-controller="MainCategory"
+                           asp-controller="SubCategory"
                            asp-action="Index"
                            class="btn btn-dark btn-large float-right mb-3">
-                            Ana Kategori Listesi
+                            Alt Kategori Listesi
                         </a>
                     }
                     else
@@ -32,7 +32,7 @@
                            asp-controller="MainCategory"
                            asp-action="Create"
                            class="btn btn-primary btn-sm float-right mb-3">
-                            Ana Kategori Ekle
+                            Alt Kategori Ekle
                         </a>
                     }
                 </div>
