--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,5 +3,7 @@
 @using RhythmicRealm.Shared.ViewModels.MainCategoryViewModels
 @using RhythmicRealm.Shared.ViewModels.SubCategoryViewModels
 @using RhythmicRealm.UI.Areas.Admin.AdminViewModels
+@using RhythmicRealm.Entity.Concrete.Identity
+@using RhythmicRealm.Shared.ViewModels.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
