--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Product/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Product/Index.cshtml
@@ -45,6 +45,7 @@
                                 <thead>
                                     <tr>
                                         <th>Id</th>
+                                        <th>Görsel</th>
                                         <th>Ürün</th>
                                         <th>Ana Kategori</th>
                                         <th>Alt Kategori</th>
@@ -61,6 +62,7 @@
                                         {
                                         <tr>
                                             <td>@product.Id</td>
+                                            <td> <img src="/images/products/@product.ImageUrl" style="width:60px;" /></td>
                                             <td>@product.Name</td>
                                             <td>@product.MainCategory.Name</td>
                                             <td>@product.SubCategory.Name</td>
