--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/SideBarUserPanel/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/SideBarUserPanel/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿    <!-- Sidebar user panel (optional) -->
 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
     <div class="image">
-        <img src="~/admin/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+        <img src="~/admin/dist/img/pa.jpeg" class="img-circle elevation-2" alt="User Image">
     </div>
     <div class="info">
         <!--identity paketini yükleyince user ismini buraya dinamik olarak alıcam-->
