--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/SubCategory/Edit.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/SubCategory/Edit.cshtml
@@ -38,6 +38,8 @@
                                   asp-action="Edit"
                                   method="post">
                                 <input type="hidden" asp-for="@Model.EditSubCategoryViewModel.Id" />
+                                <input asp-for="@Model.MainCategoryName" type="hidden" asp-for="@Model.MainCategoryName" />
+                            
                                
                                     <div class="col-md-6">
                                         <div class="form-group">
